Styled button and save card

--- a/templates/edit_review.html
+++ b/templates/edit_review.html
@@ -88,7 +88,7 @@
                     </a>
                     <!-- submit button -->
                     <button type="submit" class="btn-large green">
-                        Edit Review <i class="fas fa-circle-plus right"></i>
+                        Save <i class="fas fa-circle-plus right"></i>
                     </button>
                 </div>
             </div>
