--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
             <div class="card-panel card-panel-home">
                 <a href="{{ url_for('login') }}"><i class="fas fa-heart blue-grey-text darken-3"></i></a>
                 <a href="{{ url_for('login') }}" class="hover-link"><h4>Save</h4></a>
-                <p>Save your favourite sites in one place</p>
+                <p>Coming soon...save your favourite sites</p>
             </div>
         </div>
     </div>
