--- a/templates/view_review.html
+++ b/templates/view_review.html
@@ -13,14 +13,14 @@
             {% endif %}
             </div>
             <!-- site name -->
-            <h3 class="review-title center-align">{{ site.site_name }}</h3>
+            <h3 class="review-title center-align truncate">{{ site.site_name }}</h3>
             <!-- site location -->
-            <p><i class="fas fa-location-dot review-icon"></i> Site Location: {{ site.location_name }}</p>
-            <p><i class="fas fa-calendar-alt review-icon"></i> Visit date: {{ site.visit_date }}</p>
+            <p class="flow-text"><i class="fas fa-location-dot review-icon"></i> Site Location: {{ site.location_name }}</p>
+            <p class="flow-text"><i class="fas fa-calendar-alt review-icon"></i> Visit date: {{ site.visit_date }}</p>
             <!-- review -->
-            <p><i class="fas fa-pen review-icon"></i>{{ site.site_review }}</p>
+            <p class="flow-text"><i class="fas fa-pen review-icon"></i>{{ site.site_review }}</p>
             <!-- Image URL -->
-            <p><i class="fas fa-camera review-icon"></i> Image URL: {{ site.image_url }}</p>
+            <p class="truncate"><i class="fas fa-camera review-icon"></i> Image URL: {{ site.image_url }}</p>
             <!-- members only -->
             <div class="switch">
                 <i class="fas fa-people-group review-icon"></i>
@@ -35,7 +35,7 @@
                 </label>
             </div>
             <!-- review created by-->
-            <p>Reviewed by: {{ site.created_by }}</p>
+            <p class="flow-text">Reviewed by: {{ site.created_by }}</p>
                
             <!-- Back button -->
             <div class="row">
