--- a/templates/base.html
+++ b/templates/base.html
@@ -43,12 +43,11 @@
 
         <!--Materialize Mobile Collapse Button Nav Bar-->
         <ul class="sidenav" id="mobile-demo">
-            <li><h4 class="center-align deep-orange-text text-darken-4">Happy Camper</h4></li>
+            <li><h4 class="center-align blue-grey-text text-darken-3">Happy Camper</h4></li>
             <li><a href="{{ url_for('landing_page') }}">Home</a></li>
             <li><a href="{{ url_for('get_sites') }}">Find Campsite</a></li>
             {% if session.user %}
                 <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
-                <li><a href="#">Find Campsite</a></li>
                 <li><a href="{{ url_for('add_review') }}">Add Review</a></li>
                 {% if session.user|lower == "admin"|lower %}
                         <li><a href="{{ url_for('get_locations') }}">Manage Locations</a></li>
