--- a/templates/index.html
+++ b/templates/index.html
@@ -16,16 +16,18 @@
 <!-- search bar -->
 <div class="row container white">
     <form action="{{ url_for('search') }}" method="post" class="col s12">
-        <div class="row valign-wrapper center-align">
+        <div class="row center-align">
             <div class="input-field col s12 m8">
                 <i class="fas fa-search prefix"></i>
                 <input type="text" name="query" id="query" minlength="3" maxlength="20" class="validate" required>
-                <label for="query">Search Sites</label>
+                <label for="query">Search</label>
             </div>
-            <div class="col s12 m4">
-                <button type="submit" class="btn green">
-                    <i class="fas fa-search right"></i> search
-                </button>
+            <div class="col s12 m4 search-button">
+                <div class="row">
+                    <button type="submit" class="btn green">
+                        <i class="fas fa-search right"></i> search
+                    </button>
+                </div>
             </div>
         </div>
     </form>
