--- a/templates/sites.html
+++ b/templates/sites.html
@@ -7,18 +7,20 @@
     <!--- Search bar -->
     <div class="row card-panel">
         <form action="{{ url_for('search') }}" method="post" class="col s12">
-            <div class="row valign-wrapper center-align">
+            <div class="row center-align">
                 <div class="input-field col s12 m8">
                     <i class="fas fa-search prefix"></i>
                     <input type="text" name="query" id="query" minlength="3" maxlength="20" class="validate" required>
-                    <label for="query">Search Sites</label>
+                    <label for="query">Search</label>
                 </div>
                 
-                <div class="col s12 m4">
-                    <!-- Submit Button-->
-                    <button type="submit" class="btn green">
-                        <i class="fas fa-search right"></i> search
-                    </button>
+                <div class="col s12 m4 center-align">
+                    <div class="row">
+                        <!-- Submit Button-->
+                        <button type="submit" class="btn green">
+                            <i class="fas fa-search right"></i>search
+                        </button>
+                    </div>
                 </div>
             </div>
         </form>
@@ -40,7 +42,7 @@
                     </div>
                     <!-- site name -->
                     <div class="center-align site-title">
-                        <h5><strong>{{ site.site_name }}</strong></h5>
+                        <h5 class="truncate"><strong>{{ site.site_name }}</strong></h5>
                     </div>
 
                     <!-- site location -->
