--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,7 @@
               <ul class="right hide-on-med-and-down">
                 <li><a href="{{ url_for('landing_page') }}">Home</a></li>
                 <li><a href="{{ url_for('get_sites') }}">Find Campsite</a></li>
+                <li><a href="{{ url_for('contact') }}">Contact Us</a></li>
                 {% if session.user %}
                     <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                     <li><a href="{{ url_for('add_review') }}">Add Review</a></li>
@@ -46,6 +47,7 @@
             <li><h4 class="center-align blue-grey-text text-darken-3">Happy Camper</h4></li>
             <li><a href="{{ url_for('landing_page') }}">Home</a></li>
             <li><a href="{{ url_for('get_sites') }}">Find Campsite</a></li>
+            <li><a href="{{ url_for('contact') }}">Contact Us</a></li>
             {% if session.user %}
                 <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                 <li><a href="{{ url_for('add_review') }}">Add Review</a></li>
