--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,6 +4,38 @@
 <div class="container">
     <h3 class="center-align">Contact Us</h3>
 
+    <div class="row card-panel grey lighten-5">
+        <!-- Name field -->
+        <div class="input-field col s12">
+            <i class="fas fa-user prefix"></i>
+            <input id="name" name="name" minlength="3"  maxlength="50" 
+            type="text" class="validate" required>
+            <label for="name">Name</label>
+        </div>
+
+        <!-- Email address field -->
+        <div class="input-field col s12">
+            <i class="fas fa-at prefix"></i>
+            <input id="email" type="email" class="validate" required>
+            <label for="email">Email Address</label>
+          </div>
+
+        <!-- Message field -->
+        <div class="input-field col s12">
+            <i class="fas fa-pencil prefix"></i>
+            <textarea id="contact_message" name="contact_message" minlength="3" 
+            maxlength="800" class="materialize-textarea validate" required></textarea>
+            <label for="contact_message">Contact message</label>
+          </div>
+
+        <!-- Send button -->
+        <div class="col s12 center-align">
+            <button type="submit" class="btn-large blue-grey">Send
+            </button>
+        </div>
+
+    </div>
+
 </div>
 
 {% endblock %}
