--- a/templates/contact.html
+++ b/templates/contact.html
@@ -10,23 +10,23 @@
             <div class="input-field col s12">
                 <i class="fas fa-user prefix"></i>
                 <input id="name" name="name" minlength="3"  maxlength="50" 
-                type="text" class="validate" required>
+                type="text" class="validate form-control" required>
                 <label for="name">Name</label>
             </div>
 
             <!-- Email address field -->
             <div class="input-field col s12">
                 <i class="fas fa-at prefix"></i>
-                <input id="email" type="email" class="validate" required>
-                <label for="email">Email Address</label>
+                <input id="emailaddress" name="emailaddress" type="text" class="validate form-control" required>
+                <label for="emailaddress">Email Address</label>
             </div>
 
             <!-- Message field -->
             <div class="input-field col s12">
                 <i class="fas fa-pencil prefix"></i>
-                <textarea id="contact_message" name="contact_message" minlength="3" 
-                maxlength="800" class="materialize-textarea validate" required></textarea>
-                <label for="contact_message">Contact message</label>
+                <textarea id="contactsummary" name="contactsummary" minlength="3" 
+                maxlength="800" class="materialize-textarea validate form-control" required></textarea>
+                <label for="contactsummary">Contact message</label>
             </div>
 
             <!-- Send button -->
@@ -37,16 +37,16 @@
         </form>
     </div>
 </div>
-
-<!-- EmailJS script -->
+<!-- emailjs script -->
 <script type="text/javascript"
-        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
-</script>
+src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 <script type="text/javascript">
-   (function(){
-      emailjs.init("ibSaTyjjawnWKAFxA");
-   })();
+    (function() {
+    emailjs.init("ibSaTyjjawnWKAFxA");
+    })();
 </script>
+<!-- EmailJS script -->
 <script src="static/js/sendEmail.js"></script>
+
 
 {% endblock %}
