--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,12 @@
     <!-- Materialize Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
-    
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function() {
+            emailjs.init("ibSaTyjjawnWKAFxA");
+        })();
+    </script>
     {% block styles %}
     {% endblock %}
     <title>Happy Camper</title>
@@ -119,7 +124,8 @@
         integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
-    
+    <!-- EmailJS script -->
+    <script src="static/js/sendEmail.js"></script>
     {% block scripts %}
     {% endblock %}
 </body>
