--- a/templates/contact.html
+++ b/templates/contact.html
@@ -18,7 +18,7 @@
             <div class="input-field col s12">
                 <i class="fas fa-at prefix"></i>
                 <input id="emailaddress" name="emailaddress" type="text" class="validate form-control" required>
-                <label for="emailaddress">Email Address</label>
+                <label for="emailaddress">Email</label>
             </div>
 
             <!-- Message field -->
@@ -26,27 +26,20 @@
                 <i class="fas fa-pencil prefix"></i>
                 <textarea id="contactsummary" name="contactsummary" minlength="3" 
                 maxlength="800" class="materialize-textarea validate form-control" required></textarea>
-                <label for="contactsummary">Contact message</label>
+                <label for="contactsummary">Message</label>
             </div>
 
             <!-- Send button -->
             <div class="col s12 center-align">
-                <button type="submit" class="btn-large blue-grey">Send
+                <button type="submit" class="col s12 m8 offset-m2 l2 offset-l5 btn-large form-submit-button">Send
                 </button>
             </div>
         </form>
     </div>
 </div>
 <!-- emailjs script -->
-<script type="text/javascript"
-src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-<script type="text/javascript">
-    (function() {
-    emailjs.init("ibSaTyjjawnWKAFxA");
-    })();
-</script>
-<!-- EmailJS script -->
-<script src="static/js/sendEmail.js"></script>
+
+
 
 
 {% endblock %}
