--- a/templates/edit_location.html
+++ b/templates/edit_location.html
@@ -5,7 +5,8 @@
     <h3 class="center-align">Edit Location</h3>
 
     <div class="row card-panel grey lighten-5">
-        <form class="col s12" method="POST" action="{{ url_for('edit_location', location_id=location._id) }}">
+        <form class="col s12" method="POST" 
+        action="{{ url_for('edit_location', location_id=location._id) }}">
             <!-- location name -->
             <div class="row">
                 <div class="input-field col s12">
