--- a/templates/edit_review.html
+++ b/templates/edit_review.html
@@ -24,9 +24,11 @@
                         <option value="" disabled>Choose location</option>
                         {% for location in locations %}
                             {% if location.location_name == site.location_name %}
-                                <option value="{{ location.location_name }}" selected>{{ location.location_name }}</option>
+                                <option value="{{ location.location_name }}" 
+                                selected>{{ location.location_name }}</option>
                             {% else %}
-                                <option value="{{ location.location_name }}">{{ location.location_name }}</option>
+                                <option value="{{ location.location_name }}">
+                                    {{ location.location_name }}</option>
                             {% endif %}
                         {% endfor %}
                         </select>
