--- a/templates/locations.html
+++ b/templates/locations.html
@@ -8,7 +8,6 @@
         {% for location in locations %}
             <div class="col s12 m6 l3">
                 <div class="card card-panel-location center-align">
-                    
                     <div class="center-align location-title">
                         <h5><strong>{{ location.location_name }}</strong></h5>
                     </div>
@@ -40,6 +39,7 @@
         {% endfor %}
     </div>
 
+    <!-- Add location button -->
     <div class="row">
         <div class="col s12 center-align">
             <a href="{{ url_for('add_location') }}" class="btn-large blue-grey">
