--- a/templates/login.html
+++ b/templates/login.html
@@ -28,7 +28,8 @@
 
                 <!--submit button-->
                 <div class="row">
-                    <button type="submit" class="col s12 m8 offset-m2 l2 offset-l5 btn-large blue-grey darken-4 text-shadow">
+                    <button type="submit" 
+                    class="col s12 m8 offset-m2 l2 offset-l5 btn-large form-submit-button">
                             LOG IN
                     </button>
                 </div>
@@ -37,14 +38,13 @@
                     <div class="col s12">
                         <p class="center-align">
                             Not yet registered? 
-                            <a href="{{ url_for('register') }}" class="light-blue-text text-darken-4">Sign Up</a>
+                            <a href="{{ url_for('register') }}" 
+                            class="light-blue-text text-darken-4">Sign Up</a>
                         </p>
                     </div>
                 </div>
             </div>
         </form>
     </div>
-
-    
 
 {% endblock %}
