--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,7 +7,7 @@
     </h3>
 
 
-<!-- Check if there are more than 0 site reviews and display them as cards -->
+<!-- Check if there are more than 0 site reviews and display them -->
 {% if sites|length > 0 %}
 <div class="row center-align card-margin">
     {% for site in sites %}
@@ -15,13 +15,15 @@
         <div class="col s12 m6 l4">
             <div class="card shadow">
                 <!-- site image -->
-                
                 {% if site.image_url != ""  %}
-                    <div class="card-image site-image" style="background-image:url('{{ site.image_url }}');">
+                    <div class="card-image site-image" 
+                    style="background-image:url('{{ site.image_url }}');">
                 {% else %}
-                    <div class="card-image site-image" style="background-image: url('/static/images/tent-image.jpg');">
+                    <div class="card-image site-image" 
+                    style="background-image: url('/static/images/tent-image.jpg');">
                 {% endif %}
                 </div>
+
                 <!-- site name -->
                 <div class="center-align site-title">
                     <h5><strong>{{ site.site_name }}</strong></h5>
@@ -37,11 +39,16 @@
                     <p>Reviewed by: {{ site.created_by }}</p>
                 </div>
 
+                <!-- buttons -->
                 <div class="center-align">
-                    <a href="{{ url_for('view_review', site_id=site._id) }}" class="btn-small blue-grey">View</a>
-                    {% if ((session.user|lower == site.created_by|lower) or (session.user == "admin")) %}
-                        <a href="{{ url_for('delete_review', site_id=site._id) }}" class="btn-small red">Delete</a>
-                        <a href="{{ url_for('edit_review', site_id=site._id) }}" class="btn-small light-blue lighten-1">Edit</a>
+                    <a href="{{ url_for('view_review', site_id=site._id) }}" 
+                    class="btn-small blue-grey">View</a>
+                    {% if ((session.user|lower == site.created_by|lower) or 
+                        (session.user == "admin")) %}
+                        <a href="{{ url_for('delete_review', site_id=site._id) }}" 
+                        class="btn-small red">Delete</a>
+                        <a href="{{ url_for('edit_review', site_id=site._id) }}" 
+                        class="btn-small light-blue lighten-1">Edit</a>
                     {% endif %}
                 </div>
             </div>
