--- a/templates/register.html
+++ b/templates/register.html
@@ -4,6 +4,7 @@
 <div class="container">
     <h3 class="center-align">Sign Up</h3>
     
+    <!-- Register form -->
     <div class="row">
         <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register') }}">
             <div class="card-panel">
@@ -11,39 +12,46 @@
                 <div class="row">
                     <div class="input-field col s6">
                         <i class="fa-solid fa-user prefix blue-grey-text text-darken-4"></i>
-                        <input id="firstname" name="firstname" type="text" class="validate" required>
+                        <input id="firstname" name="firstname" type="text" 
+                        class="validate" required>
                         <label for="firstname">First Name</label>
                     </div>
 
                 <!--Last name field -->
                     <div class="input-field col s6">
                         <i class="fa-solid fa-user prefix blue-grey-text text-darken-4"></i>
-                        <input id="lastname" name="lastname" type="text" class="validate" required>
+                        <input id="lastname" name="lastname" type="text" 
+                        class="validate" required>
                         <label for="lastname">Last Name</label>
                     </div>
                 </div>
+
                 <!--Username field -->
                 <div class="row">
                     <div class="input-field col s12">
                         <i class="fa-solid fa-user-shield prefix blue-grey-text text-darken-4"></i>
                         <input id="username" name="username" type="text" minlength="5"
-                        maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
+                        maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" 
+                        class="validate" required>
                         <label for="username">Username</label>
                     </div>
                 </div>
+
                 <!--password field -->
                 <div class="row">
                     <div class="input-field col s12">
                         <i class="fa-solid fa-lock prefix blue-grey-text text-darken-4"></i>
                         <input id="password" name="password" type="password" minlength="5"
-                        maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
+                        maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" 
+                        class="validate" required>
                         <label for="password">Password</label>
                     </div>
                 </div>
                     
                 <!--submit button-->
                 <div class="row">
-                    <button type="submit" class="col s12 m8 offset-m2 l2 offset-l5 btn-large blue-grey darken-4 text-shadow">
+                    <button type="submit" 
+                    class="col s12 m8 offset-m2 l2 offset-l5 btn-large form-submit-button">
                             SIGN UP
                     </button>
                 </div>
@@ -52,7 +60,8 @@
                     <div class="col s12">
                         <p class="center-align">
                             Already registered? 
-                            <a href="{{ url_for('login') }}" class="light-blue-text text-darken-4">Log In</a>
+                            <a href="{{ url_for('login') }}" 
+                            class="light-blue-text text-darken-4">Log In</a>
                         </p>
                     </div>
                 </div>
