--- a/templates/sites.html
+++ b/templates/sites.html
@@ -4,17 +4,19 @@
 <div class="container">
         
     <h3 class="center-align">Find a Campsite</h3>
+
     <!--- Search bar -->
     <div class="row card-panel">
         <form action="{{ url_for('search') }}" method="post" class="col s12">
             <div class="row center-align">
                 <div class="input-field col s12 m8">
                     <i class="fas fa-search prefix"></i>
-                    <input type="text" name="query" id="query" minlength="3" maxlength="20" class="validate" required>
+                    <input type="text" name="query" id="query" minlength="3" 
+                    maxlength="20" class="validate" required>
                     <label for="query">Search</label>
                 </div>
                 
-                <div class="col s12 m4 center-align">
+                <div class="col s12 m4 search-button">
                     <div class="row">
                         <!-- Submit Button-->
                         <button type="submit" class="btn green">
@@ -33,13 +35,15 @@
             <div class="col s12 m6 l4">
                 <div class="card shadow">
                     <!-- site image -->
-                    
                     {% if site.image_url != ""  %}
-                        <div class="card-image site-image" style="background-image:url('{{ site.image_url }}');">
+                        <div class="card-image site-image" 
+                        style="background-image:url('{{ site.image_url }}');">
                     {% else %}
-                        <div class="card-image site-image" style="background-image: url('/static/images/tent-image.jpg');">
+                        <div class="card-image site-image" 
+                        style="background-image: url('/static/images/tent-image.jpg');">
                     {% endif %}
                     </div>
+
                     <!-- site name -->
                     <div class="center-align site-title">
                         <h5 class="truncate"><strong>{{ site.site_name }}</strong></h5>
@@ -55,15 +59,20 @@
                         <p>Reviewed by: {{ site.created_by }}</p>
                     </div>
 
+                    <!-- Modal for feedback -->
                     <div class="center-align">
-                        <a href="{{ url_for('view_review', site_id=site._id) }}" class="btn-small blue-grey">View</a>
-                        {% if ((session.user|lower == site.created_by|lower) or (session.user == "admin")) %}
+                        <a href="{{ url_for('view_review', site_id=site._id) }}" 
+                        class="btn-small blue-grey">View</a>
+                        {% if ((session.user|lower == site.created_by|lower) or 
+                            (session.user == "admin")) %}
                             <!-- Modal Trigger -->
-                            <button data-target="modal1" class="btn-small red modal-trigger">Delete</button>
+                            <button data-target="modal1" class="btn-small red modal-trigger">
+                                Delete</button>
                             <!-- Modal Structure -->
                             <div id="modal1" class="modal">
                                 <div class="modal-content">
-                                <h5><i class="fas fa-triangle-exclamation small"></i> Are you sure you want to delete this review?
+                                <h5><i class="fas fa-triangle-exclamation small"></i> 
+                                    Are you sure you want to delete this review?
                                     <i class="fas fa-triangle-exclamation small"></i></h5>
                                 <p>Deleting a review cannot be undone afterwards</p>
                                 </div>
@@ -73,11 +82,13 @@
                                     Cancel</a>
                                     <!-- delete button -->
                                     <a href="{{ url_for('delete_review', site_id=site._id) }}" 
-                                    class="modal-close waves-effect waves-green btn-flat modal-hover">Delete</a>
+                                    class="modal-close waves-effect waves-green btn-flat modal-hover">
+                                    Delete</a>
                                 </div>
                             </div>
 
-                            <a href="{{ url_for('edit_review', site_id=site._id) }}" class="btn-small light-blue lighten-1">Edit</a>
+                            <a href="{{ url_for('edit_review', site_id=site._id) }}" 
+                            class="btn-small light-blue lighten-1">Edit</a>
                         {% endif %}
                     </div>
                 </div>
@@ -85,7 +96,7 @@
         {% endfor %}
     </div>
     {% else %}
-        <h3 class="center-align">No sites found</h3>
+        <h4 class="center-align">No sites found</h4>
     {% endif %}
 </div>
 
