Bug fix - stray closing div tag added

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -17,12 +17,12 @@
                 <!-- site image -->
                 {% if site.image_url != ""  %}
                     <div class="card-image site-image" 
-                    style="background-image:url('{{ site.image_url }}');">
+                    style="background-image:url('{{ site.image_url }}');"></div>
                 {% else %}
                     <div class="card-image site-image" 
-                    style="background-image: url('/static/images/tent-image.jpg');">
+                    style="background-image: url('/static/images/tent-image.jpg');"></div>
                 {% endif %}
-                </div>
+                
 
                 <!-- site name -->
                 <div class="center-align site-title">
