--- a/templates/add_location.html
+++ b/templates/add_location.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="container">
-    <h3 class="center-align">Add Location</h3>
+    <h3 class="center-align review-title">Add Location</h3>
 
     <div class="row card-panel grey lighten-5">
         <form class="col s12" method="POST" action="{{ url_for('add_location') }}">
