--- a/templates/locations.html
+++ b/templates/locations.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="container">
-    <h3 class="center-align">Manage Locations</h3>
+    <h3 class="center-align review-title">Manage Locations</h3>
 
     <div class="row">
         {% for location in locations %}
