--- a/templates/register.html
+++ b/templates/register.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="container">
-    <h3 class="center-align">Sign Up</h3>
+    <h3 class="center-align review-title">Sign Up</h3>
     
     <!-- Register form -->
     <div class="row">
