--- a/templates/sites.html
+++ b/templates/sites.html
@@ -3,7 +3,7 @@
 
 <div class="container">
         
-    <h3 class="center-align">Find a Campsite</h3>
+    <h3 class="center-align review-title">Find a Campsite</h3>
 
     <!--- Search bar -->
     <div class="row card-panel">
