--- a/templates/add_review.html
+++ b/templates/add_review.html
@@ -3,17 +3,17 @@
 
 <div class="container">
 
-    <h3 class="center-align">Add Site Review</h3>
+    <h3 class="center-align review-title">Add Site Review</h3>
 
     <!-- site review form from Materialize -->
-    <div class="row card-panel grey lighten-5">
+    <div class="row card-panel white">
         <form class="col s12" method="POST" action="{{ url_for('add_review') }}">
             <!-- site name -->
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-campground prefix"></i>
                     <input id="site_name" name="site_name" minlength="5" maxlength="50" 
-                    type="text" class="validate" required>
+                    type="text" class="validate" required aria-label="name">
                     <label for="site_name">Site Name</label>
                 </div>
             </div>
@@ -21,7 +21,8 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-location-dot prefix"></i>
-                        <select id="location_name" name="location_name" class="validate" required>
+                        <select id="location_name" name="location_name" 
+                        class="validate" required aria-label="location">
                         <option value="" disabled selected>Choose location</option>
                         {% for location in locations %}
                             <option value="{{ location.location_name }}">
@@ -35,7 +36,8 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-calendar-alt prefix"></i>
-                    <input id="visit_date" name="visit_date" type="text" class="datepicker">
+                    <input id="visit_date" name="visit_date" type="text" class="datepicker" 
+                    aria-label="date">
                     <label for="visit_date">Date of camp</label>
                 </div>
             </div>
@@ -44,7 +46,8 @@
                 <div class="input-field col s12">
                     <i class="fas fa-pen prefix"></i>
                     <textarea id="site_review" name="site_review" minlength="5"
-                    maxlength="800" class="materialize-textarea validate" required></textarea>
+                    maxlength="800" class="materialize-textarea validate" 
+                    required aria-label="review"></textarea>
                     <label for="site_review">Review</label>
                 </div>
             </div>
@@ -53,7 +56,7 @@
                 <div class="input-field col s12">
                     <i class="fas fa-camera prefix"></i>
                     <input id="image_url" name="image_url" minlength="5" maxlength="100" 
-                    type="text" class="validate">
+                    type="text" class="validate" aria-label="url">
                     <label for="image_url">Image URL</label>
                 </div>
             </div>
@@ -64,7 +67,8 @@
                         <i class="fas fa-people-group prefix"></i>
                         <label for="members_only">
                             Members Only?
-                            <input type="checkbox" id="members_only" name="members_only">
+                            <input type="checkbox" id="members_only" name="members_only" 
+                            aria-label="members">
                             <span class="lever"></span>
                         </label>
                     </div>
@@ -75,10 +79,10 @@
             <div class="row">
                 <div class="col s12 center-align">
                     <!-- cancel button -->
-                    <a href="{{ url_for('get_sites') }}" class="btn-large red">
+                    <a href="{{ url_for('get_sites') }}" class="btn-large red-button">
                         Cancel <i class="fas fa-circle-xmark right"></i>
                     </a>
-                    <button type="submit" class="btn-large blue-grey">
+                    <button type="submit" class="btn-large grey-button">
                         Add Review <i class="fas fa-circle-plus right"></i>
                     </button>
                 </div>
