--- a/templates/base.html
+++ b/templates/base.html
@@ -89,7 +89,7 @@
     </main>
 
     <!-- Footer section-->
-    <footer class="page-footer blue-grey darken-1 center-align">
+    <footer class="page-footer center-align">
         <div class="container">
             <ul>
                 <li>
@@ -115,7 +115,7 @@
 
         <div class="footer-copyright">
             <div class="container">
-                © 2023 Emma Scott
+                <h6>© 2023 Emma Scott</h6>
             </div>
         </div>
     </footer>
@@ -126,7 +126,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
     <!-- EmailJS script -->
-    <script src="static/js/sendEmail.js"></script>
+    <script src="/static/js/sendEmail.js"></script>
     {% block scripts %}
     {% endblock %}
 </body>
