--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="container">
-    <h3 class="center-align">Contact Us</h3>
+    <h3 class="center-align review-title">Contact Us</h3>
 
     <div class="row card-panel grey lighten-5">
         <form onsubmit="return sendMail(this);" class="col s12">
