--- a/templates/edit_location.html
+++ b/templates/edit_location.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="container">
-    <h3 class="center-align">Edit Location</h3>
+    <h3 class="center-align review-title">Edit Location</h3>
 
     <div class="row card-panel grey lighten-5">
         <form class="col s12" method="POST" 
