--- a/templates/edit_review.html
+++ b/templates/edit_review.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="container">
-    <h3 class="center-align">Edit Site Review</h3>
+    <h3 class="center-align review-title">Edit Site Review</h3>
 
     <!-- site review form from Materialize -->
     <div class="row card-panel grey lighten-5">
