--- a/templates/view_review.html
+++ b/templates/view_review.html
@@ -74,7 +74,7 @@
                         </div>
 
                         <a href="{{ url_for('edit_review', site_id=site._id) }}" 
-                        class="btn-small light-blue lighten-1">Edit</a>
+                        class="btn-small grey-button">Edit</a>
                     {% endif %}
                 </div>
             </div>
