--- a/static/css/style.css
+++ b/static/css/style.css
@@ -66,7 +66,7 @@ h4 {
 .bg-image {
     width: 100%;
     height: 400px;
-    background: url('../images/heroimage.png') no-repeat bottom center;
+    background: url('../images/heroimage.webp') no-repeat bottom center;
     background-size: cover;
     margin: auto;
 }
