--- a/templates/add_location.html
+++ b/templates/add_location.html
@@ -19,10 +19,10 @@
             <div class="row">
                 <div class="col s12 center-align">
                     <!-- cancel button -->
-                    <a href="{{ url_for('get_sites') }}" class="btn-large red">
+                    <a href="{{ url_for('get_sites') }}" class="btn-large red-button">
                         Cancel <i class="fas fa-circle-xmark right"></i>
                     </a>
-                    <button type="submit" class="btn-large green">
+                    <button type="submit" class="btn-large grey-button">
                         Add Location <i class="fas fa-circle-plus right"></i>
                     </button>
                 </div>
