--- a/templates/add_review.html
+++ b/templates/add_review.html
@@ -79,7 +79,7 @@
             <div class="row">
                 <div class="col s12 center-align">
                     <!-- cancel button -->
-                    <a href="{{ url_for('get_sites') }}" class="btn-large red-button">
+                    <a href="{{ url_for('get_sites') }}" class="btn-large delete-button">
                         Cancel <i class="fas fa-circle-xmark right"></i>
                     </a>
                     <button type="submit" class="btn-large grey-button">
