--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,8 @@
     </div>
 </div>
 <div class="row container blue-grey lighten-2">
-    <h3 class="center-align">Happy Camper</h3> 
-    <h4 class="center-align">Find your happy place</h4>
+    <h3 class="center-align review-title">Happy Camper</h3> 
+    <h4 class="center-align review-title">Find your happy place</h4>
 </div>
 
 <!-- search bar -->
