--- a/templates/edit_location.html
+++ b/templates/edit_location.html
@@ -19,7 +19,7 @@
             <!-- Submit button -->
             <div class="row">
                 <div class="col s12 center-align">
-                    <a href="{{ url_for('get_locations') }}" class="btn-large red">
+                    <a href="{{ url_for('get_locations') }}" class="btn-large delete-button">
                         Cancel <i class="fas fa-circle-xmark right"></i>
                     </a>
                     <button type="submit" class="btn-large green">
