--- a/templates/edit_review.html
+++ b/templates/edit_review.html
@@ -11,7 +11,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-campground prefix"></i>
-                    <input id="site_name" name="site_name" minlength="5"  maxlength="50" 
+                    <input id="site_name" name="site_name" minlength="5" maxlength="50" 
                     value="{{ site.site_name }}" type="text" class="validate" required>
                     <label for="site_name">Site Name</label>
                 </div>
@@ -59,7 +59,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-camera prefix"></i>
-                    <input id="image_url" name="image_url" minlength="5"  maxlength="100" 
+                    <input id="image_url" name="image_url" minlength="5" maxlength="100" 
                     value="{{ site.image_url }}" type="text" class="validate">
                     <label for="image_url">Image URL: </label>
                 </div>
@@ -85,7 +85,7 @@
             <div class="row">
                 <div class="col s12 center-align">
                     <!-- cancel button -->
-                    <a href="{{ url_for('get_sites') }}" class="btn-large red">
+                    <a href="{{ url_for('get_sites') }}" class="btn-large delete-button">
                         Cancel <i class="fas fa-circle-xmark right"></i>
                     </a>
                     <!-- submit button -->
