--- a/templates/profile.html
+++ b/templates/profile.html
@@ -46,7 +46,7 @@
                     {% if ((session.user|lower == site.created_by|lower) or 
                         (session.user == "admin")) %}
                         <a href="{{ url_for('delete_review', site_id=site._id) }}" 
-                        class="btn-small red-button">Delete</a>
+                        class="btn-small delete-button">Delete</a>
                         <a href="{{ url_for('edit_review', site_id=site._id) }}" 
                         class="btn-small grey-button">Edit</a>
                     {% endif %}
