Final styling to buttons

--- a/templates/add_review.html
+++ b/templates/add_review.html
@@ -26,7 +26,7 @@
                         <option value="" disabled selected>Choose location</option>
                         {% for location in locations %}
                             <option value="{{ location.location_name }}">
-                                {{ location.location_name }}</option>
+                                {{- location.location_name -}}</option>
                         {% endfor %}
                         </select>
                         <label for="location_name">Location</label>
