--- a/static/css/style.css
+++ b/static/css/style.css
@@ -113,7 +113,7 @@ h4 {
 /* -------- hover classes -------- */
 
 .modal-hover:hover {
-    background-color: ##263238;
+    background-color: #263238;
     color: #fafafa;
 }
 
