--- a/templates/sites.html
+++ b/templates/sites.html
@@ -85,7 +85,7 @@
                             </div>
 
                             <a href="{{ url_for('edit_review', site_id=site._id) }}" 
-                            class="btn-small light-blue lighten-1">Edit</a>
+                            class="btn-small blue-grey">Edit</a>
                         {% endif %}
                     </div>
                 </div>
