Final styling to text

--- a/templates/view_review.html
+++ b/templates/view_review.html
@@ -14,12 +14,12 @@
             <!-- site name -->
             <h3 class="review-title center-align truncate">{{ site.site_name }}</h3>
             <!-- site location -->
-            <p class="flow-text"><i class="fas fa-location-dot review-icon"></i> 
+            <p><i class="fas fa-location-dot review-icon"></i> 
                 Site Location: {{ site.location_name }}</p>
-            <p class="flow-text"><i class="fas fa-calendar-alt review-icon"></i> 
+            <p><i class="fas fa-calendar-alt review-icon"></i> 
                 Visit date: {{ site.visit_date }}</p>
             <!-- review -->
-            <p class="flow-text"><i class="fas fa-pen review-icon"></i>
+            <p><i class="fas fa-pen review-icon"></i>
                 {{ site.site_review }}</p>
             <!-- Image URL -->
             <p class="truncate"><i class="fas fa-camera review-icon"></i> 
@@ -40,7 +40,7 @@
                 </label>
             </div>
             <!-- review created by-->
-            <p class="flow-text">Reviewed by: {{ site.created_by }}</p>
+            <p>Reviewed by: {{ site.created_by }}</p>
                
             <!-- Back button -->
             <div class="row">
