Changed width of name fields on form for small devices

--- a/templates/register.html
+++ b/templates/register.html
@@ -10,7 +10,7 @@
             <div class="card-panel">
                 <!--First name field -->
                 <div class="row">
-                    <div class="input-field col s6">
+                    <div class="input-field col s12 m6">
                         <i class="fa-solid fa-user prefix blue-grey-text text-darken-4"></i>
                         <input id="firstname" name="firstname" type="text" 
                         class="validate" required>
@@ -18,7 +18,7 @@
                     </div>
 
                 <!--Last name field -->
-                    <div class="input-field col s6">
+                    <div class="input-field col s12 m6">
                         <i class="fa-solid fa-user prefix blue-grey-text text-darken-4"></i>
                         <input id="lastname" name="lastname" type="text" 
                         class="validate" required>
